# planetside_discord_blurber

./: Cargo.toml  README.md
src/: events.rs  main.rs
src/commands/: event_patterns  mod.rs  ping.rs  track.rs
voicepacks/: README.md
voicepacks/agent_scarn/: bastion_pull.txt  ctf_flag_take.txt  death.txt  destroy_own_vehicle.txt  destroy_vehicle.txt  enemy_bastion_pull.txt  get_revived.txt  kill.txt  kill_double.txt  kill_headshot.txt  kill_penta.txt  kill_quad.txt  kill_triple.txt  login.txt  logout.txt  revive_teammate.txt  suicide.txt  unlock_any.txt  unlock_weapon.txt
voicepacks/agent_scarn/tracks/: GO_HOME  beat_it_turd.mkv  clean_up_isle_5.mkv  clean_up_isle_5_2.mkv  get_a_life_losers.mkv  go_home.mkv  go_puck_yourself.mkv  i_got_problems.mkv  i_love_being_retired.mkv  itll_take_more_than.mkv  its_always_about_money.mkv  leave_it_at_reception.mkv  let_me_dream.mkv  puppies.mkv  scarn_here.mkv  so_sorry_x2.mkv  sorry_i_have_to_do_this  this_makes_it_personal.mkv  well_well_well.mkv  what_is_the_point.mkv  you_will_never_get_away.mkv
voicepacks/crashmore/: bastion_pull.txt  ctf_flag_take.txt  destroy_own_vehicle.txt  destroy_vehicle.txt  enemy_bastion_pull.txt  get_revived.txt  kill.txt  kill_double.txt  kill_headshot.txt  kill_triple.txt  login.txt  logout.txt  revive_teammate.txt  suicide.txt  unlock_any.txt  unlock_camo.txt  unlock_weapon.txt
