[package]
name = "planetside_discord_blurber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
auraxis = { git = "https://github.com/Bentheburrito/auraxis-rs", branch = "item-added-struct" }
rand = "0.8.5"
reqwest = "0.11.13"

[dependencies.songbird]
features = ["builtin-queue"]
version = "0.3.0"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "voice"]
version = "0.11"